zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/packed_struct_uses_own_size.zig
const S = packed struct {
    x: @Int(.unsigned, @sizeOf(S)),
};
comptime {
    _ = @as(S, undefined);
}

// error
//
// :2:32: error: type 'tmp.S' depends on itself for size query here
